--- a/css/theme.css
+++ b/css/theme.css
@@ -1160,7 +1160,7 @@ License URI:
     box-shadow: 0px 9px 35px 0px rgba(33, 37, 41, 0.15);
     height: 100%;
     width: 100%;
-    background-color: #081444;
+    background-color: #c3c6d0;
 }
 .ab_images img{
     width: 100%;
