chore: correct styles

--- a/css/preset.css
+++ b/css/preset.css
@@ -35,8 +35,8 @@ body,html{
 body{
     font-family: 'Fira Sans', sans-serif;
     font-size: 14px;
-    line-height: 21px;
-    color: #868e96;
+    line-height: 22px;
+    color: #000000;
     letter-spacing: 0;
     font-weight: 400;
 }
