--- a/css/theme.css
+++ b/css/theme.css
@@ -1157,10 +1157,10 @@ License URI:
     position: relative;
     margin-right: 70px;
     border-radius: 3px;
-    box-shadow: 0px 9px 35px 0px rgba(33, 37, 41, 0.15);
+    /* box-shadow: 0px 9px 35px 0px rgba(33, 37, 41, 0.15); */
     height: 100%;
     width: 100%;
-    background-color: #c3c6d0;
+    /* background-color: #c3c6d0; */
 }
 .ab_images img{
     width: 100%;
@@ -2938,6 +2938,7 @@ License URI:
 .copyright{
     position: relative;
     background: #212529;
+    height: 10rem;
 }
 .copyright p{
     margin: 0 0 30px;
