--- a/css/theme.css
+++ b/css/theme.css
@@ -1354,6 +1354,7 @@ License URI:
     position: relative;
     background: #FFF;
     border-radius: 3px;
+    height: 500px;
     box-shadow: 0px 9px 35px 0px rgba(33, 37, 41, 0.07);
     margin: 30px 15px 30px;
 
@@ -1410,7 +1411,6 @@ License URI:
 .sr01_dtl{
     position: relative;
     padding: 73px 30px 40px;
-    word-break: break-all;
 }
 .sr01_no_icon .sr01_dtl{
     padding: 33px 37px 40px 40px;
@@ -1453,6 +1453,9 @@ License URI:
 }
 .sr01_dtl p{
     margin: 0 0 20px;
+}
+.learn_more_lnk_div{
+    height: 100px;
 }
 .learn_more_lnk{
     font-size: 14px;
@@ -1518,7 +1521,7 @@ License URI:
     bottom: 0;
     margin: auto 0;
     width: 60px;
-    height: 60px;
+    height: 70px;
     border: 1px solid #e9ecef;
     background: #FFF;
     color: #212529;
