--- a/css/theme.css
+++ b/css/theme.css
@@ -1163,8 +1163,8 @@ License URI:
     /* background-color: #c3c6d0; */
 }
 .ab_images img{
-    width: 100%;
-    height: 100%;
+    padding-top: 5rem;width: 100%;
+    /* height: 100%; */
     border-radius: 3px;
 }
 .vp_btn{
